--- a/WebApplication1/Views/Employee/Edit.cshtml
+++ b/WebApplication1/Views/Employee/Edit.cshtml
@@ -43,7 +43,7 @@
                 <span asp-validation-for="Salary" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Сохранить" class="btn btn-default" />
             </div>
         </form>
     </div>
@@ -51,3 +51,10 @@
 <div>
     <a asp-action="Index"> Назад к списку </a>
 </div>
+
+
+@section scripts {
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.10/jquery.validate.unobtrusive.js"></script>
+    
+}
