--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -8,6 +8,6 @@
 
 }
 
-@await Html.PartialAsync( "Partial/_Features" )
+@*@await Html.PartialAsync( "Partial/_Features" )*@
 @await Html.PartialAsync( "Partial/_CategoryTab" );
 @await Html.PartialAsync( "Partial/_RecommendItems" )
