--- a/WebApplication1/Views/Shared/Partial/_ProductItems.cshtml
+++ b/WebApplication1/Views/Shared/Partial/_ProductItems.cshtml
@@ -8,7 +8,7 @@
         <div class="product-image-wrapper">
             <div class="single-products">
                 <div class="productinfo text-center">
-                    <img src="~/images/shop/@item.ImageUrl" alt="" />
+                    <img src="~/template/images/shop/@item.ImageUrl" alt="" />
                     <h2> @item.Price.ToString("C") </h2>
                     <p> @item.Name </p>
                     <a href="#" class="btn btn-default add-to-cart">
