--- a/WebApplication1/Views/Shared/_Header.cshtml
+++ b/WebApplication1/Views/Shared/_Header.cshtml
@@ -33,24 +33,21 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="logo pull-left">
-                        <a asp-controller="Home" asp-action="Index"><img src="~/template/images/home/logo.png" alt="" /></a>
+                        <a asp-controller="Home" asp-action="Index">
+                            <img src="~/template/images/home/logo.png" alt=" " />
+                        </a>
                     </div>
                     <div class="btn-group pull-right">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                USA
-                                <span class="caret"></span>
+                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">USA<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Canada</a></li>
                                 <li><a href="#">UK</a></li>
                             </ul>
                         </div>
-
                         <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                DOLLAR
-                                <span class="caret"></span>
+                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown"> DOLLAR <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Canadian Dollar</a></li>
@@ -59,20 +56,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-5">
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
-                            <li><a asp-controller="Employee" asp-action="Index"><i class="fa fa-user"></i> Employee</a></li>
-                            <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
-                            <li><a asp-controller="Home" asp-action="Checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                            <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                            <li><a asp-controller="Home" asp-action="Login"><i class="fa fa-lock"></i> Login</a></li>
+                            <li>
+                                <a asp-controller="Employees" asp-action="Index">
+                                    <i class="fa fa-user"></i>Список сотрудников</a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-star"></i>Wishlist</a></li>
+                            <li>
+                                <a asp-controller="Home" asp-action="Checkout"><i class=" fa fa-crosshairs"></i>Checkout</a>
+                            </li>
+                            <li>
+                                <a asp-controller="Home" asp-action="Cart">
+                                    <i class="fa fa-shopping-cart"></i>Cart</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
+                <div class="col-sm-3">
+                    @await Component.InvokeAsync("LoginLogout")
+                </div>
             </div>
         </div>
-    </div><!--/header-middle-->
+    </div> <!--/header-middle-->
 
     <div class="header-bottom">
         <!--header-bottom-->
