--- a/WebApplication1/Views/Shared/_Header.cshtml
+++ b/WebApplication1/Views/Shared/_Header.cshtml
@@ -39,7 +39,8 @@
                     </div>
                     <div class="btn-group pull-right">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">USA<span class="caret"></span>
+                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
+                                USA<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Canada</a></li>
@@ -47,7 +48,8 @@
                             </ul>
                         </div>
                         <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown"> DOLLAR <span class="caret"></span>
+                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
+                                DOLLAR <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Canadian Dollar</a></li>
@@ -60,22 +62,24 @@
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a asp-controller="Employees" asp-action="Index">
-                                    <i class="fa fa-user"></i>Список сотрудников</a>
+                                <a asp-controller="employee" asp-action="Index">
+                                    <i class="fa fa-user"></i>Список сотрудников
+                                </a>
                             </li>
                             <li><a href="#"><i class="fa fa-star"></i>Wishlist</a></li>
                             <li>
                                 <a asp-controller="Home" asp-action="Checkout"><i class=" fa fa-crosshairs"></i>Checkout</a>
                             </li>
                             <li>
-                                <a asp-controller="Home" asp-action="Cart">
-                                    <i class="fa fa-shopping-cart"></i>Cart</a>
+                                <a asp-controller="Cart" asp-action="Details">
+                                    <i class="fa fa-shopping-cart"></i>Cart
+                                </a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    @await Component.InvokeAsync("LoginLogout")
+                    @await Component.InvokeAsync( "LoginLogout" )
                 </div>
             </div>
         </div>
@@ -103,8 +107,9 @@
                                     <li><a asp-controller="Catalog" asp-action="Shop">Products</a></li>
                                     <li><a asp-controller="Catalog" asp-action="ProductDetails">Product Details</a></li>
                                     <li><a asp-controller="Home" asp-action="Checkout">Checkout</a></li>
-                                    <li><a asp-controller="Home" asp-action="Cart">Cart</a></li>
-                                    <li><a asp-controller="Home" asp-action="Login">Login</a></li>
+                                    <li><a asp-controller="Cart" asp-action="Details">Cart</a></li>
+                                    <li><a asp-controller="Account" asp-action="Login">Login</a></li>
+                                    <li><a asp-controller="Account" asp-action="Register">Регистрация</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
