--- a/WebApplication1/Views/Cart/Details.cshtml
+++ b/WebApplication1/Views/Cart/Details.cshtml
@@ -1,8 +1,8 @@
-﻿@model WebStore.Models.Cart.CartViewModel
+﻿@model WebStore.Models.Cart.DetailsViewModel
 @{
     ViewData[ "Title" ] = "Корзина";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <section id="cart_items">
     <div class="breadcrumbs">
         <ol class="breadcrumb">
@@ -23,8 +23,12 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach ( var item in Model.Items )
+                @{
+                    var sumCart = 0m;
+                }
+                @foreach ( var item in Model.CartViewModel.Items )
                 {
+                    sumCart += (item.Value * item.Key.Price);
                     <tr>
                         <td class="cart_product">
                             <a href=""><img src="~/template/images/shop/@item.Key.ImageUrl" alt=""></a>
@@ -61,75 +65,10 @@
 <section id="do_action">
 
     <div class="heading">
-        <h3>What would you like to do next?</h3>
-        <p>Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
+        <h3>Оформите заказ</h3>
     </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="chose_area">
-                <ul class="user_option">
-                    <li>
-                        <input type="checkbox">
-                        <label>Use Coupon Code</label>
-                    </li>
-                    <li>
-                        <input type="checkbox">
-                        <label>Use Gift Voucher</label>
-                    </li>
-                    <li>
-                        <input type="checkbox">
-                        <label>Estimate Shipping & Taxes</label>
-                    </li>
-                </ul>
-                <ul class="user_info">
-                    <li class="single_field">
-                        <label>Country:</label>
-                        <select>
-                            <option>United States</option>
-                            <option>Bangladesh</option>
-                            <option>UK</option>
-                            <option>India</option>
-                            <option>Pakistan</option>
-                            <option>Ucrane</option>
-                            <option>Canada</option>
-                            <option>Dubai</option>
-                        </select>
-
-                    </li>
-                    <li class="single_field">
-                        <label>Region / State:</label>
-                        <select>
-                            <option>Select</option>
-                            <option>Dhaka</option>
-                            <option>London</option>
-                            <option>Dillih</option>
-                            <option>Lahore</option>
-                            <option>Alaska</option>
-                            <option>Canada</option>
-                            <option>Dubai</option>
-                        </select>
-
-                    </li>
-                    <li class="single_field zip-field">
-                        <label>Zip Code:</label>
-                        <input type="text">
-                    </li>
-                </ul>
-                <a class="btn btn-default update" href="">Get Quotes</a>
-                <a class="btn btn-default check_out" href="">Continue</a>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="total_area">
-                <ul>
-                    <li>Cart Sub Total <span>$59</span></li>
-                    <li>Eco Tax <span>$2</span></li>
-                    <li>Shipping Cost <span>Free</span></li>
-                    <li>Total <span>$61</span></li>
-                </ul>
-                <a class="btn btn-default update" href="">Update</a>
-                <a class="btn btn-default check_out" href="">Check Out</a>
-            </div>
-        </div>
+    <div class="row login-form">
+        @Html.Partial("_OrderPartial", Model.OrderViewModel,
+                new ViewDataDictionary(ViewData) { { "sumCart", sumCart } })
     </div>
 </section><!--/#do_action-->
