--- a/WebApplication1/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -76,5 +76,6 @@
     <script src="~/template/js/bootstrap.min.js"></script>
     <!-- CUSTOM SCRIPTS -->
     <script src="~/admin/js/custom.js"></script>
+    @RenderSection( "scripts", false )
 </body>
 </html>
