--- a/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebStore.Models.Account.LoginViewModel
+﻿@model WebStore.Domain.Models.Account.LoginViewModel
 @{
     ViewData[ "Title" ] = "Вход";
 }
