--- a/WebApplication1/Views/Catalog/ProductDetails.cshtml
+++ b/WebApplication1/Views/Catalog/ProductDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebStore.Models.Product
+﻿@using WebStore.Domain.Models.Product
 @model ProductViewModel
 @{
     ViewBag.Title = "Товар:" + Model.Name;
