--- a/WebApplication1/Views/Catalog/Shop.cshtml
+++ b/WebApplication1/Views/Catalog/Shop.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebStore.Models.Product.CatalogViewModel
+﻿@model WebStore.Domain.Models.Product.CatalogViewModel
 @{
     ViewData[ "Title" ] = "Shop";
 }
