--- a/WebApplication1/Views/Employee/Index.cshtml
+++ b/WebApplication1/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EmployeeView>
+﻿@model IEnumerable<WebStore.Domain.Models.Product.EmployeeView>
 @{
     ViewBag.Title = "Список сотрудников";
 }
