--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,12 +1,19 @@
-﻿@{
+﻿@model IEnumerable<string>
+@{
     ViewBag.Title = "Index";
     Layout = "_LayoutWithSidebar";
 }
 
 @section top {
     @await Html.PartialAsync( "Partial/_Slider" )
-
 }
+
+<div>
+    @foreach ( var item in Model )
+    {
+        <p>@item</p>
+    }
+</div>
 
 @*@await Html.PartialAsync( "Partial/_Features" )*@
 @await Html.PartialAsync( "Partial/_CategoryTab" );
