--- a/WebApplication1/Views/Shared/Components/Sections/Default.cshtml
+++ b/WebApplication1/Views/Shared/Components/Sections/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebStore.Models.Product.SectionViewModel>
+﻿@model IEnumerable<WebStore.Domain.Models.Product.SectionViewModel>
 <h2>Категории</h2>
 <div class="panel-group category-products" id="accordian">
     <!--category-products-->
