--- a/WebApplication1/Views/Shared/Partial/_ProductItems.cshtml
+++ b/WebApplication1/Views/Shared/Partial/_ProductItems.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebStore.Models.Product.ProductViewModel>
+﻿@model IEnumerable<WebStore.Domain.Models.Product.ProductViewModel>
 <div class="features_items">
     <!--features_items-->
     <h2 class="title text-center">Товары</h2>
