--- a/WebApplication1/Areas/Admin/Views/_ViewImports.cshtml
+++ b/WebApplication1/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,1 @@
-﻿@using WebStore.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
