--- a/WebApplication1/Views/Cart/Details.cshtml
+++ b/WebApplication1/Views/Cart/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebStore.Models.Cart.DetailsViewModel
+﻿@model WebStore.Domain.Models.Cart.DetailsViewModel
 @{
     ViewData[ "Title" ] = "Корзина";
     Layout = "~/Views/Shared/_Layout.cshtml";
