--- a/WebApplication1/Views/Cart/_OrderPartial.cshtml
+++ b/WebApplication1/Views/Cart/_OrderPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebStore.Models.Order
+﻿@using WebStore.Domain.Models.Order
 @model OrderViewModel
 <form method="post" asp-antiforgery="true" asp-action="CheckOut">
     <div class="col-sm-6">
