--- a/WebApplication1/Views/Shared/Components/Brands/Default.cshtml
+++ b/WebApplication1/Views/Shared/Components/Brands/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebStore.Models.Product.BrandViewModel>
+﻿@model IEnumerable<WebStore.Domain.Models.Product.BrandViewModel>
 <div class="brands_products">
     <!--brands_products-->
     <h2>Бренды</h2>
