--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
     </environment>
 
     <environment exclude="Development">
-        <link href="~template/css/typography.min.css" rel="stylesheet" asp-append-version="true">
-        <link rel="stylesheet" href="~template/css/site.min.css" asp-append-version="true" />
+        <link href="~/template/css/typography.min.css" rel="stylesheet" asp-append-version="true">
+        <link rel="stylesheet" href="~/template/css/site.min.css" asp-append-version="true" />
     </environment>
 
     <!--Секция для отображения кастомных стилей, если понадобятся-->
