--- a/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebStore.Domain.Models.Account.RegisterUserViewModel
+﻿@model WebStore.Domain.ViewModel.Account.RegisterUserViewModel
 
 @{
     ViewData[ "Title" ] = "Регистрация";
