--- a/WebApplication1/Views/Catalog/Shop.cshtml
+++ b/WebApplication1/Views/Catalog/Shop.cshtml
@@ -1,6 +1,7 @@
-﻿@model WebStore.Domain.Models.Product.CatalogViewModel
+﻿@model WebStore.Domain.ViewModel.Product.CatalogViewModel
 @{
     ViewData[ "Title" ] = "Shop";
+	Layout = "_LayoutBreadcrumbs";
 }
 
 @section top {
