--- a/WebApplication1/Views/Employee/Edit.cshtml
+++ b/WebApplication1/Views/Employee/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebStore.Domain.Models.Product.EmployeeView
+﻿@model WebStore.Domain.ViewModel.Product.EmployeeView
 
 @{
     ViewData[ "Title" ] = "Редактирование сотрудника";
