--- a/WebApplication1/Views/Shared/Components/Sections/Default.cshtml
+++ b/WebApplication1/Views/Shared/Components/Sections/Default.cshtml
@@ -1,8 +1,8 @@
-﻿@model IEnumerable<WebStore.Domain.Models.Product.SectionViewModel>
+﻿@model WebStore.Domain.ViewModel.Product.SectionCompleteViewModel
 <h2>Категории</h2>
 <div class="panel-group category-products" id="accordian">
     <!--category-products-->
-    @foreach ( var parentSection in Model )
+    @foreach ( var parentSection in Model.Sections )
     {
         if ( parentSection.ChildSections.Count > 0 )
         {
@@ -15,12 +15,12 @@
                         </a>
                     </h4>
                 </div>
-                <div id="@parentSection.Name.ToLower()" class="panel-collapse collapse">
+                <div id="@parentSection.Name.ToLower()" class="panel-collapse collapse @(parentSection.Id == Model.CurrentParentSectionId ? "in":null)">
                     <div class="panel-body">
                         <ul>
                             @foreach ( var childSection in parentSection.ChildSections )
                             {
-                                <li><a asp-controller="Catalog" asp-action="Shop" asp-route-sectionId="@childSection.Id">@childSection.Name </a></li>
+                                <li @(childSection.Id == Model.CurrentSectionId ? "class=active" : null)><a asp-controller="Catalog" asp-action="Shop" asp-route-sectionId="@childSection.Id">@childSection.Name </a></li>
                             }
                         </ul>
                     </div>
@@ -31,7 +31,7 @@
         {
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title"><a asp-controller="Catalog" asp-action="Shop" asp-route-sectionId="@parentSection.Id">@parentSection.Name</a></h4>
+                    <h4 class="panel-title @(parentSection.Id == Model.CurrentSectionId ? "active":null)"><a asp-controller="Catalog" asp-action="Shop" asp-route-sectionId="@parentSection.Id">@parentSection.Name</a></h4>
                 </div>
             </div>
         }
