--- a/WebApplication1/Views/Shared/Partial/_ProductItems.cshtml
+++ b/WebApplication1/Views/Shared/Partial/_ProductItems.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<WebStore.Domain.Models.Product.ProductViewModel>
+﻿@model IEnumerable<WebStore.Domain.ViewModel.Product.ProductViewModel>
+
+@{
+    var isBrand = Context.Request.Query.ContainsKey( "brandId" );
+}
 <div class="features_items">
     <!--features_items-->
     <h2 class="title text-center">Товары</h2>
@@ -8,22 +12,25 @@
             <div class="product-image-wrapper">
                 <div class="single-products">
                     <div class="productinfo text-center">
-                        <a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@item.Id"><img src="~/template/images/shop/@item.ImageUrl" alt="" /></a>
-                        <h2>@item.Price.ToString( "C" )</h2>
-                        <a asp-controller="Catalog" asp-action="ProductDetails" asp-route-id="@item.Id">
-                            <p>@item.Name</p>
-                        </a>
+                        @if ( isBrand )
+                        {
+                            <a asp-action="ProductDetails" asp-route-id="@item.Id" asp-route-fromBrand="true">
+                                <img src="~/images/shop/@item.ImageUrl" alt="" />
+                                <h2>@item.Price.ToString( "C" )</h2>
+                                <p>@item.Name</p>
+                            </a>
+                        }
+                        else
+                        {
+                            <a asp-action="ProductDetails" asp-route-id="@item.Id">
+                                <img src="~/images/shop/@item.ImageUrl" alt="" />
+                                <h2>@item.Price.ToString( "C" )</h2>
+                                <p>@item.Name</p>
+                            </a>
+                        }
                         <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@item.Id" asp-route-returnUrl="@Context.Request.Path" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
                     </div>
-                    @*<div class="product-overlay">
-                            <div class="overlay-content">
-                                <h2>@item.Price.ToString("C")</h2>
-                                <p>@item.Name</p>
-                                <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
-                            </div>
-                        </div>*@
                 </div>
-
                 <div class="choose">
                     <ul class="nav nav-pills nav-justified">
                         <li><a href="#"><i class="fa fa-plus-square"></i>Добавить в список желаний</a></li>
