--- a/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/Views/Account/Login.cshtml
@@ -1,5 +1,6 @@
-﻿@model WebStore.Domain.Models.Account.LoginViewModel
+﻿@model WebStore.Domain.ViewModel.Account.LoginViewModel
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData[ "Title" ] = "Вход";
 }
 <section id="form">
