--- a/WebApplication1/Views/Employee/Index.cshtml
+++ b/WebApplication1/Views/Employee/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@model IEnumerable<WebStore.Domain.Models.Product.EmployeeView>
+﻿@model IEnumerable<WebStore.Domain.ViewModel.Product.EmployeeView>
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Список сотрудников";
 }
 
