--- a/WebApplication1/Views/Shared/_Header.cshtml
+++ b/WebApplication1/Views/Shared/_Header.cshtml
@@ -33,45 +33,26 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="logo pull-left">
-                        <a asp-controller="Home" asp-action="Index">
-                            <img src="~/template/images/home/logo.png" alt=" " />
-                        </a>
+                        <a asp-controller="Home" asp-action="Index"><img src="~/template/images/home/logo.png" alt=" " /></a>
                     </div>
-                    <div class="btn-group pull-right">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                USA<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Canada</a></li>
-                                <li><a href="#">UK</a></li>
-                            </ul>
-                        </div>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                DOLLAR <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Canadian Dollar</a></li>
-                                <li><a href="#">Pound</a></li>
-                            </ul>
-                        </div>
+                    <div class="pull-right">
+                        @*@await Component.InvokeAsync( "Cart" )*@
                     </div>
                 </div>
                 <div class="col-sm-5">
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a asp-controller="employee" asp-action="Index">
+                                <a is-active-route asp-controller="employee" asp-action="Index">
                                     <i class="fa fa-user"></i>Список сотрудников
                                 </a>
                             </li>
                             <li><a href="#"><i class="fa fa-star"></i>Wishlist</a></li>
                             <li>
-                                <a asp-controller="Home" asp-action="Checkout"><i class=" fa fa-crosshairs"></i>Checkout</a>
+                                <a is-active-route asp-controller="Home" asp-action="Checkout"><i class=" fa fa-crosshairs"></i>Checkout</a>
                             </li>
                             <li>
-                                <a asp-controller="Cart" asp-action="Details">
+                                <a is-active-route asp-controller="Cart" asp-action="Details">
                                     <i class="fa fa-shopping-cart"></i>Cart
                                 </a>
                             </li>
@@ -98,29 +79,15 @@
                             <span class="icon-bar"></span>
                         </button>
                     </div>
-                    <div class="mainmenu pull-left">
+                                        <div class="mainmenu pull-left">
                         <ul class="nav navbar-nav collapse navbar-collapse">
-                            <li><a asp-controller="Home" asp-action="Index" class="active">Home</a></li>
-                            <li class="dropdown">
-                                <a href="#">Shop<i class="fa fa-angle-down"></i></a>
-                                <ul role="menu" class="sub-menu">
-                                    <li><a asp-controller="Catalog" asp-action="Shop">Products</a></li>
-                                    <li><a asp-controller="Catalog" asp-action="ProductDetails">Product Details</a></li>
-                                    <li><a asp-controller="Home" asp-action="Checkout">Checkout</a></li>
-                                    <li><a asp-controller="Cart" asp-action="Details">Cart</a></li>
-                                    <li><a asp-controller="Account" asp-action="Login">Login</a></li>
-                                    <li><a asp-controller="Account" asp-action="Register">Регистрация</a></li>
-                                </ul>
+                            <li><a is-active-route asp-controller="Home" asp-action="Index">Home</a></li>
+                            <li>
+                                <a is-active-route ignore-action asp-controller="Catalog" asp-action="Shop">Shop</a>
                             </li>
-                            <li class="dropdown">
-                                <a href="#">Blog<i class="fa fa-angle-down"></i></a>
-                                <ul role="menu" class="sub-menu">
-                                    <li><a asp-controller="Home" asp-action="Blog">Blog List</a></li>
-                                    <li><a asp-controller="Home" asp-action="BlogSingle">Blog Single</a></li>
-                                </ul>
-                            </li>
-                            <li><a asp-controller="Home" asp-action="PageNotFound">404</a></li>
-                            <li><a asp-controller="Home" asp-action="ContactUs">Contact</a></li>
+                            <li><a is-active-route asp-controller="Home" asp-action="Blog">Blog List</a></li>
+                            <li><a is-active-route asp-controller="Home" asp-action="BlogSingle">Blog Single</a></li>
+                            <li><a is-active-route asp-controller="Home" asp-action="ContactUs">Contact</a></li>
                         </ul>
                     </div>
                 </div>
