--- a/WebApplication1/wwwroot/template/css/main.css
+++ b/WebApplication1/wwwroot/template/css/main.css
@@ -2510,3 +2510,11 @@ h2.title {
 .contact-info .social-networks ul li a:hover {
     color: #FE980F;
 }
+
+.panel-body ul li.active {
+    text-decoration: underline;
+}
+
+.panel-heading h4.active {
+    text-decoration: underline;
+}
