--- a/WebApplication1/Views/Catalog/Shop.cshtml
+++ b/WebApplication1/Views/Catalog/Shop.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebStore.Domain.ViewModel.Product.CatalogViewModel
 @{
     ViewData[ "Title" ] = "Shop";
-	Layout = "_LayoutBreadcrumbs";
+    Layout = "_LayoutBreadcrumbs";
 }
 
 @section top {
@@ -12,19 +12,11 @@
     </section>
 }
 
-    <section>
-        <div class="row">
-            @*<div class="col-sm-3">
-                @await Html.PartialAsync( "Partial/_LeftSideBar" )
-            </div>*@
-            <div class="col-sm-9 padding-right">
-                @await Html.PartialAsync( "Partial/_ProductItems" , Model.Products )
-                <ul class="pagination">
-                    <li class="active"><a href="">1</a></li>
-                    <li><a href="">2</a></li>
-                    <li><a href="">3</a></li>
-                    <li><a href="">&raquo;</a></li>
-                </ul>
-            </div>
+<section>
+    <div class="row">
+        <div class="col-sm-9 padding-right">
+            @await Html.PartialAsync( "Partial/_ProductItems", Model.Products )
+            <paging page-model="Model.PageViewModel" page-action="Shop" page-url-sectionId="@Model.SectionId" page-url-brandId="@Model.BrandId"></paging>
         </div>
-    </section>
+    </div>
+</section>
