--- a/WebApplication1/Views/Cart/Details.cshtml
+++ b/WebApplication1/Views/Cart/Details.cshtml
@@ -4,12 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <section id="cart_items">
-    <div class="breadcrumbs">
-        <ol class="breadcrumb">
-            <li><a href="#">Home</a></li>
-            <li class="active">Shopping Cart</li>
-        </ol>
-    </div>
     <div class="table-responsive cart_info">
         <table class="table table-condensed">
             <thead>
@@ -37,21 +31,23 @@
                             <h4><a asp-action="ProductDetails" asp-controller="Catalog" asp-route-id="@item.Key.Id">@item.Key.Name</a></h4>
                             <p>Артикул: 1089772</p>
                         </td>
-                        <td class="cart_price">
+                        <td class="cart_price" data-price="@item.Key.Price">
                             <p>@(item.Key.Price.ToString( "C" ))</p>
                         </td>
                         <td class="cart_quantity">
                             <div class="cart_quantity_button">
-                                <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@item.Key.Id" asp-route-returnUrl="@Context.Request.Path" class="cart_quantity_up"> + </a>
+                                <a href="#" class="cart_quantity_up" data-id="@item.Key.Id"> + </a>
+
                                 <input class="cart_quantity_input" type="text" name="quantity" value="@item.Value" autocomplete="off" size="2">
-                                <a asp-controller="Cart" asp-action="DecrementFromCart" asp-route-id="@item.Key.Id" class="cart_quantity_down"> - </a>
+
+                                <a href="#" class="cart_quantity_down" data-id="@item.Key.Id"> - </a>
                             </div>
                         </td>
                         <td class="cart_total">
-                            <p class="cart_total_price">@((item.Value * item.Key.Price).ToString( "C" ))</p>
+                            <p class="cart_total_price" data-price="@(item.Value * item.Key.Price)">@((item.Value * item.Key.Price).ToString( "C" ))</p>
                         </td>
                         <td class="cart_delete">
-                            <a class="cart_quantity_delete" asp-controller="Cart" asp-action="RemoveFromCart" asp-route-id="@item.Key.Id"><i class="fa fa-times"></i></a>
+                            <a class="cart_quantity_delete" data-id="@item.Key.Id"><i class="fa fa-times"></i></a>
                         </td>
                     </tr>
                 }
