--- a/WebApplication1/Views/Cart/_OrderPartial.cshtml
+++ b/WebApplication1/Views/Cart/_OrderPartial.cshtml
@@ -12,17 +12,17 @@
         <span asp-validation-for="Address" class="text-danger"></span>
     </div>
     @{
-        ViewData.TryGetValue("sumCart", out var sumObj);
+        ViewData.TryGetValue( "sumCart", out var sumObj );
     }
     <div class="col-sm-6">
         <div class="total_area">
-            @if (sumObj != null)
+            @if ( sumObj != null )
             {
                 var sum = (decimal)sumObj;
                 <ul>
-                    <li>Итого <span>@sum.ToString("C")</span></li>
+                    <li>Итого <span id="totalOrderSum">@sum.ToString( "C" )</span></li>
                 </ul>
-                if (sum > 0)
+                if ( sum > 0 )
                 {
                     <input type="submit" value="Оформить заказ" class="btn btn-default check_out" />
                 }
