--- a/WebApplication1/Views/Catalog/ProductDetails.cshtml
+++ b/WebApplication1/Views/Catalog/ProductDetails.cshtml
@@ -48,7 +48,7 @@
                 <img src="~/template/images/product-details/rating.png" alt="" />
                 <span>
                     <span> @Model.Price.ToString( "C" ) </span>
-                    <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.Id" asp-route-returnUrl="@Context.Request.Path" class="btn btn-fefault cart">
+                    <a href="#" class="btn btn-default cart callAddToCart" data-id="@Model.Id">
                         <i class="fa fa-shopping-cart"></i>
                         Добавить в корзину
                     </a>
