--- a/WebApplication1/Views/Shared/Partial/_CategoryTabLarge.cshtml
+++ b/WebApplication1/Views/Shared/Partial/_CategoryTabLarge.cshtml
@@ -14,7 +14,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery1.jpg" alt="" />
+                            <img src="~/template/images/home/gallery1.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -26,7 +26,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery2.jpg" alt="" />
+                            <img src="~/template/images/home/gallery2.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -38,7 +38,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery3.jpg" alt="" />
+                            <img src="~/template/images/home/gallery3.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -50,7 +50,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery4.jpg" alt="" />
+                            <img src="~/template/images/home/gallery4.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -65,7 +65,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery1.jpg" alt="" />
+                            <img src="~/template/images/home/gallery1.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -77,7 +77,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery3.jpg" alt="" />
+                            <img src="~/template/images/home/gallery3.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -89,7 +89,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery2.jpg" alt="" />
+                            <img src="~/template/images/home/gallery2.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -101,7 +101,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery4.jpg" alt="" />
+                            <img src="~/template/images/home/gallery4.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -116,7 +116,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery1.jpg" alt="" />
+                            <img src="~/template/images/home/gallery1.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -128,7 +128,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery2.jpg" alt="" />
+                            <img src="~/template/images/home/gallery2.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -140,7 +140,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery3.jpg" alt="" />
+                            <img src="~/template/images/home/gallery3.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
@@ -152,7 +152,7 @@
                 <div class="product-image-wrapper">
                     <div class="single-products">
                         <div class="productinfo text-center">
-                            <img src="images/home/gallery4.jpg" alt="" />
+                            <img src="~/template/images/home/gallery4.jpg" alt="" />
                             <h2>$56</h2>
                             <p>Easy Polo Black Edition</p>
                             <button type="button" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</button>
