--- a/WebApplication1/Views/Shared/Partial/_ProductItems.cshtml
+++ b/WebApplication1/Views/Shared/Partial/_ProductItems.cshtml
@@ -15,7 +15,7 @@
                         @if ( isBrand )
                         {
                             <a asp-action="ProductDetails" asp-route-id="@item.Id" asp-route-fromBrand="true">
-                                <img src="~/images/shop/@item.ImageUrl" alt="" />
+                                <img src="~/template/images/shop/@item.ImageUrl" alt="" />
                                 <h2>@item.Price.ToString( "C" )</h2>
                                 <p>@item.Name</p>
                             </a>
@@ -23,12 +23,12 @@
                         else
                         {
                             <a asp-action="ProductDetails" asp-route-id="@item.Id">
-                                <img src="~/images/shop/@item.ImageUrl" alt="" />
+                                <img src="~/template/images/shop/@item.ImageUrl" alt="" />
                                 <h2>@item.Price.ToString( "C" )</h2>
                                 <p>@item.Name</p>
                             </a>
                         }
-                        <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@item.Id" asp-route-returnUrl="@Context.Request.Path" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
+                        <a href="#" class="btn btn-default add-to-cart callAddToCart" data-id="@item.Id"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
                     </div>
                 </div>
                 <div class="choose">
