--- a/WebApplication1/Views/Shared/_Header.cshtml
+++ b/WebApplication1/Views/Shared/_Header.cshtml
@@ -35,8 +35,8 @@
                     <div class="logo pull-left">
                         <a asp-controller="Home" asp-action="Index"><img src="~/template/images/home/logo.png" alt=" " /></a>
                     </div>
-                    <div class="pull-right">
-                        @*@await Component.InvokeAsync( "Cart" )*@
+                    <div class="pull-right" id="cartContainer">
+                        @await Component.InvokeAsync( "Cart" )
                     </div>
                 </div>
                 <div class="col-sm-5">
