--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -58,12 +58,22 @@
         <script src="~/template/js/price-range.js"></script>
         <script src="~/template/js/jquery.prettyPhoto.js"></script>
         <script src="~/template/js/main.js"></script>
+        <script src="~/template/js/cart/cartLogic.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/template/js/jquery.scrollUp.min.js" asp-append-version="true"></script>
         <script src="~/template/js/site.min.js" asp-append-version="true"></script>
     </environment>
-
+    <script type="text/javascript">
+        $(function() {
+            Cart.init({
+                addToCartLink: '@Url.Action("AddToCart","Cart")',
+                getCartViewLink: '@Url.Action("GetCartView", "Cart")',
+                removeFromCartLink: '@Url.Action("RemoveFromCart","Cart")',
+                decrementLink : '@Url.Action("DecrementFromCart", "Cart")'
+            });
+        });
+    </script>
     <!--Секция для отображения кастомных скриптов, если понадобятся-->
     @RenderSection( "scripts", false )
 </body>
